--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,9 +4,12 @@
   переключая тему
 */
 
-.page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
+/* .page.theme_dark {
+  --nav-bar-color:rgba(255, 0, 112, 1);
+  --accent-color: rgba(255, 0, 112, 1);
+  --description-text-color:#F1B2CE;
+}  */
+/* :root {
+  --accent-color: rgba(255, 0, 112, 1);
+  --description-text-color:#F1B2CE;
+} */
