--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,718 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  background-color: var(--background-color-page);
+  background-attachment: fixed;
+}
+
+.decorated-zone{
+  /* padding-top: 20px; */
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(3 , 1fr);
+  grid-template-rows: repeat(3 , 1fr);
+  /* grid-template-rows:auto 1fr auto; */
+  /* grid-row-gap:50px; */
+  background-image: url("../images/cover-image-dark.png");
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.header__theme-menu{
+  padding-top: 20px;
+  grid-column: 2;
+  grid-row: 1;
+}
+.header__theme-menu-list{
+  display: flex;
+  justify-content: center;
+  column-gap: 10px;
+}
+.header__theme-menu-button{
+  text-transform: lowercase;
+  background-color: transparent;
+  color: var(--nav-bar-color);
+  border: none;
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
+  padding: 2px 13px;
+}
+.header__theme-menu-button:hover{
+  border: 1px solid var(--nav-bar-color-hover);
+}
+
+.header__theme-menu-button:focus{
+  outline: none;
+  border-bottom: 1px solid var(--nav-bar-color);
+}
+
+.header__theme-menu-button_active{
+  border: 1px solid var(--nav-bar-color);
+
+}
+
+.header__rec__container{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  gap: 1px;
+  align-items: center;
+  justify-content: center;
+}
+.circle__container__header{
+  padding: 1px 2px;
+  border-top: 1px solid var(--nav-bar-color);
+  border-right: 1px solid var(--nav-bar-color);
+}
+
+.header__rec{
+  color: var(--accent-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.circle__header{
+  position: relative;
+  width: 9px; 
+  height: 9px;
+  border-radius: 50%; 
+  margin: 5px 5px 7px 7px;
+  background-color: var(--accent-color);
+
+} 
+
+.header__title__container{
+  grid-area: 2 / 1 / span 1 / span 3;
+  align-self: center;
+}
+
+.header__title{
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  margin-top: auto;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
+  line-height: 82.5%;
+  color: var(--h1-title-color);
+  text-shadow: 4px 4px 0px #FF0070;
+}
+
+.header__description__container{
+  grid-area: 3 / 2 / span 1 / span 2;
+  margin-right: 22px;
+  justify-self: flex-end;
+  align-self: top;
+  margin-top: 50px;
+  
+}
+
+.header__description{
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  color: #000028;
+  background-color: var(--accent-color);
+  white-space: pre-line;
+}
+
+.dark__theam__border__container{
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  border-bottom: 1px solid var(--nav-bar-color);
+  border-left: 1px solid var(--nav-bar-color);
+}
+
+.dark__theam__border{
+  margin: 24px 19px 5px 5px ;
+}
+
+.hard__to__concentrate__container{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  /* grid-template-rows: repeat(2 , 256px); */
+  grid-template-rows: 1fr auto;
+  margin: 60px 0px;
+  grid-row-gap: 20px;
+  column-gap: 16px;
+}
+
+.chapter__title{
+  color: var(--nav-bar-color);
+  grid-area: 1 / 1 / span 1 / span 1;
+  font-family: 'IBM Plex Mono' , sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  white-space: pre-line;
+  padding-bottom: 20px;
+
+}
+
+.explanations__multitasking__container{
+  grid-area: 1 / 2 / span 1 / span 1;
+  margin-bottom: 5px;
+}
+
+.explanations__dopamine__container{
+  grid-area: 2 / 2 / span 1 / span 1;
+}
+
+.explanations__title{
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  background-color: var(--accent-color);
+  margin-bottom: 10px;
+  /* margin-top: 20px; */
+}
+
+.explanations__description{
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: var(--description-text-color);
+  /* margin-top: 20px; */
+}
+
+.explanations__description__link{
+  display: inline-block;
+  padding: 0px 1px 4px 1px;
+  line-height: 10px;
+  text-decoration: none;
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.explanations__description__link:hover{
+  text-decoration: underline;
+}
+.explanations__description__link:focus{
+  outline:none;
+  border: 1px solid var(--description-text-color);
+
+}
+
+.decrease__in__concentration__container{
+  display: grid;
+  grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
+  grid-template-rows: auto;
+  grid-column-gap: 20px;
+}
+
+.decrease__in__concentration__explanations__multitasking__container{
+  grid-area: 1 / 1 / span 1 / span 1;
+}
+
+.decrease__in__concentration__explanations__food__container{
+  grid-area: 1 / 2 / span 1 / span 1;
+}
+
+.decrease__in__concentration__explanations__gadget__container{
+  grid-area: 1 / 3 / span 1 / span 1;
+}
+
+.concentration__section{
+  margin: 80px 20px 60px 20px;
+}
+.concentration__section-top{
+  margin: 60px 20px ;
+}
+
+.how__to__concentrate__better__container{
+  margin-top: 85px;
+  display: grid;
+  grid-template-columns: 1fr 2fr ;
+  grid-template-rows: auto auto 1fr auto auto;
+  grid-column-gap: 14px;
+}
+
+.imagine_the_sky_container{
+  grid-area: 1 / 2 / span 1 / span 1;
+}
+
+.turn__on__music_container{
+  grid-area: 2 / 2 / span 1 / span 1;
+}
+
+.take__walk_container{
+  grid-area: 3 / 2 / span 1 / span 1;
+}
+
+.eat__well_container{
+  grid-area: 4 / 2 / span 1 / span 1;
+}
+
+.read_container{
+  grid-area: 5 / 2 / span 1 / span 1;
+}
+
+.explanations__title_card{
+  margin-top: 20px;
+  margin-bottom: 13px;
+  font-weight: 400;
+  line-height: 23px;
+}
+
+.image__section{
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto 1fr auto;
+  gap: 20px;
+  overflow: hidden;
+  position: relative;
+}
+
+.sunset__image{
+  grid-area: 1 / 1 / span 1 / span 2;
+  max-width: 100%;
+  object-fit:contain;
+}
+.ice-cream__image{
+  grid-area: 1 / 3 / span 2/ span 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+}
+.tape__image{
+  grid-area: 2 / 1 / span 3/ span 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+}
+.books__image{
+  grid-area: 2 / 2 / span 1/ span 1;
+  max-width: 100%;
+  object-fit:contain;
+}
+.street__image{
+  margin-top: 5px;
+  grid-area: 3 / 2 / span 2/ span 2;
+  max-width: 100%;
+  object-fit:contain;
+}
+
+.concentration__section-images{
+  margin: 82px 20px 0 20px;
+}
+
+.footer__focus__container{
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr ;
+  grid-template-rows: 1fr 1fr 1fr;
+  position: relative;
+}
+
+.footer__focus{
+  grid-area: 2 / 1 / span 1/ span 1;
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
+  line-height: 82.5%;
+  color: var(--h1-title-color);
+  text-shadow: 2px 2px 0px #FF0070;
+  ;
+  margin: auto;
+}
+
+.border__footer__container{
+  grid-area: 3 / 1 / span 1/ span 1;
+}
+
+.dark__theam__border__top__container{
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+.dark__theam__border__top{
+  margin: 5px 5px 24px 19px ;
+}
+.footer{
+  /* margin: 60px 20px 20px 20px; */
+  margin-top: 60px;
+  width: 100vw;
+  height: 100vh;
+
+}
+
+.dark__theam__border__bottom__container{
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.dark__theam__border__bottom{
+  margin: 24px 19px 5px 5px ;
+}
+
+
+@media screen and (max-width: 768px) and (min-height: 1024px) {
+  
+  .decorated-zone{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    row-gap: 50px;
+    grid-template-columns: repeat(3 , 1fr);
+    grid-template-rows: repeat(3 , 1fr);
+    background-image: url("../images/cover-image-dark.png");
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+  }
+
+  .header__theme-menu{
+    margin-bottom: 18px;
+    justify-self: flex-end;
+    align-self: flex-end;
+    grid-column: 3;
+    grid-row: 1;
+    padding-right:20px ;
+    padding-top:0px ;
+  }
+
+  .header__theme-menu-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 15px;
+  }
+  .header__description__container {
+    margin: 8px 22px 0 0;
+  }
+
+  .chapter__title{
+    max-width: 236px;
+  }
+  .chapter__title-consentration
+  {
+    padding-top: 6px;
+  }
+
+  .explanations__description_pre-line{
+    white-space: pre-line;
+  }
+
+  .header__description{
+    align-self: bottom;
+    /* margin-top: 20px; */
+    max-width: 364px;
+    max-height: 125px;
+  }
+
+  .concentration__section-images{
+    padding-top: 20px;
+  }
+  .header__description__wrap{
+    white-space: nowrap;
+  }
+
+  .decrease__in__concentration__container{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr) ;
+    grid-column-gap: 20px;
+  }
+  
+  .decrease__in__concentration__explanations__multitasking__container{
+    grid-area: 1 / 1 / span 1 / span 1;
+  }
+  
+  .decrease__in__concentration__explanations__food__container{
+    grid-area: 2 / 1 / span 1 / span 1;
+  }
+  
+  .decrease__in__concentration__explanations__gadget__container{
+    grid-area: 3 / 1 / span 1 / span 1;
+  }
+
+
+  .footer__focus__container{
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    position: relative;
+  }
+}
+
+@media screen and (max-width: 375px) and (min-height: 668px) {
+  .decorated-zone{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    grid-template-rows: repeat(3 , 1fr);
+    background-image: url("../images/cover-image-dark.png");
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    row-gap: 20px;
+    margin-bottom: 40px;
+
+  }
+
+  .header__rec__container{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    gap: 1px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .explanations__description__mobile__class{
+    padding-bottom: 25px;
+  }
+
+  .header__title{
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+  .concentration__section{
+    margin: 60px 10px 30px 10px;
+  }
+
+  .concentration__section-top{
+    margin: 30px 10px ;
+  }
+
+  .explanations__title_card{
+    margin-top: 20px;
+    margin-bottom: 16px;
+    font-weight: 400;
+    line-height: 23px;
+  }
+
+  .explanations__title-images{
+    margin-top: 45px;
+    margin-bottom: 10px;
+  }
+
+  .header__theme-menu{
+    justify-self: flex-end;
+    align-self:center;
+    grid-column: 3;
+    grid-row: 1;
+    padding-right:10px ;
+    padding-top:38px ;
+  }
+
+  .header__theme-menu-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    align-items: flex-start;
+    row-gap: 15px;
+  }
+
+  .header__description__container{
+    margin-top: 26px;
+    grid-area: 3 / 1 / span 1 / span 3;
+    margin-right: 10px;
+    margin-left: 10px;
+    justify-self: flex-end;
+    align-self:flex-start;
+  }
+
+  .header__title__container{
+    padding-left: 10px;
+    grid-area: 2 / 1 / span 1 / span 3;
+    align-self: center;
+  }
+
+
+  .dark__theam__border__container{
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    border-bottom: 1px solid var(--nav-bar-color);
+    border-left: 1px solid var(--nav-bar-color);
+  }
+
+  .chapter__title{
+    color: var(--accent-color);
+    grid-area: 1 / 1 / span 1 / span 1;
+    font-family: 'IBM Plex Mono', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    white-space: pre-line;
+    padding-bottom: 0px;
+  }
+
+  .chapter__title-bolt{
+    margin-bottom: 20px;
+  }
+  .hard__to__concentrate__container{
+    display: grid;
+    grid-template-columns: 1fr;
+    /* grid-template-rows: repeat(2 , 256px); */
+    grid-template-rows: auto 1fr auto;
+    margin: 0px 0px;
+    grid-row-gap: 20px;
+    column-gap: 20px;
+  }
+
+  .explanations__multitasking__container{
+    grid-area: 2 / 1 / span 1 / span 1;
+  }
+  
+  .explanations__dopamine__container{
+    grid-area: 3 / 1 / span 1 / span 1;
+  }
+  
+  .decrease__in__concentration__container{
+    padding-top: 20px;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto minmax(0,1fr) auto ;
+    grid-column-gap: 20px;
+  }
+  
+  .decrease__in__concentration__explanations__multitasking__container{
+    grid-area: 2 / 1 / span 1 / span 1;
+  }
+  
+  .decrease__in__concentration__explanations__food__container{
+    grid-area: 3 / 1 / span 1 / span 1;
+  }
+  
+  .decrease__in__concentration__explanations__gadget__container{
+    grid-area: 4 / 1 / span 1 / span 1;
+  }
+
+  .how__to__concentrate__better__container{
+    margin-top: 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:auto auto auto 1fr auto auto;
+    row-gap: 0px;
+  }
+  
+  .imagine_the_sky_container{
+    grid-area: 2 / 1 / span 1 / span 1;
+  }
+  
+  .turn__on__music_container{
+    grid-area: 3 / 1 / span 1 / span 1;
+  }
+  
+  .take__walk_container{
+    grid-area: 4 / 1 / span 1 / span 1;
+  }
+  
+  .eat__well_container{
+    grid-area: 5 / 1 / span 1 / span 1;
+  }
+  
+  .read_container{
+    grid-area: 6 / 1 / span 1 / span 1;
+  }
+
+  .image__section{
+    margin-top: 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto minmax(0,1fr) minmax(0,0.68fr) minmax(0,1fr) auto;
+    gap: 10px;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .sunset__image{
+    grid-area: 1 / 1 / span 1 / span 1;
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+    
+  }
+  .ice-cream__image{
+    grid-area: 2 / 1 / span 1/ span 1;
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+  }
+  .tape__image{
+    grid-area: 3 / 1 / span 1/ span 1;
+    /* width: 100%; */
+    aspect-ratio: 3/4;
+    object-fit:contain;
+  }
+  .books__image{
+    grid-area: 4 / 1 / span 1/ span 1;
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+  }
+  .street__image{
+    grid-area: 5 / 1 / span 1/ span 1;
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+    margin-top: 0px;
+  }
+  .footer{
+    margin: 30px 0px 10px 0px;
+    width: 100vw;
+    height: 100vh;
+  }
+  .footer__focus__container{
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr ;
+    grid-template-rows: 1fr 1fr 1fr;
+    position: relative;
+  }
+
+  .footer__focus{
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    margin-top: 74px;
+  }
+
+
+  .dark__theam__border__bottom__container{
+    position: absolute;
+    left: 10px;
+    bottom: 1px;
+    border-bottom: 1px solid var(--accent-color);
+    border-left: 1px solid var(--accent-color);
+  }
+
+  .dark__theam__border__top__container{
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    border-top: 1px solid var(--accent-color);
+    border-right: 1px solid var(--accent-color);
+  }
 }
