--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,8 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --nav-bar-color:rgba(255, 0, 112, 1);
+  --accent-color: rgba(255, 0, 112, 1);
+  --description-text-color:#F1B2CE;
+  --h1-title-color: #DB00FF;
+  --background-color-page:rgba(0, 0, 40, 1);
+  --nav-bar-color-hover:#FF007066;
+}
