--- a/styles/light.css
+++ b/styles/light.css
@@ -4,36 +4,31 @@
   переключая тему
 */
 
-
 .page.theme_light {
-  --nav-bar-color:#353430;
-  --accent-color: #FF8DCB;
-  --description-text-color:#353430;
-  --h1-title-color: #FFC2E6;
-  --background-color-page: #FFF1F7;
-  --nav-bar-color-hover:#32312D66;
-
-  
+  --nav-bar-color: #353430;
+  --accent-color: #ff8dcb;
+  --description-text-color: #353430;
+  --h1-title-color: #ffc2e6;
+  --background-color-page: #fff1f7;
+  --nav-bar-color-hover: #32312d66;
 }
 
-.page.theme_light  .decorated-zone{
+.page.theme_light .decorated-zone {
   background-image: url("../images/cover-image-light.png");
-  background-size:cover;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-
-.page.theme_light .header__rec{
+.page.theme_light .header__rec {
   display: none;
 }
 
-.page.theme_light .circle__header{
+.page.theme_light .circle__header {
   display: none;
 }
 
-
-.page.theme_light .header__rec__container{
+.page.theme_light .header__rec__container {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -43,9 +38,7 @@
   border-right: 1px solid var(--nav-bar-color);
 }
 
-.page.theme_light .circle__container__header{
+.page.theme_light .circle__container__header {
   border: none;
-  margin: 17px 13px 5px 5px ;
+  margin: 17px 13px 5px 5px;
 }
-
-
