--- a/styles/light.css
+++ b/styles/light.css
@@ -1,24 +1,24 @@
-.page.theme_dark {
-  --nav-bar-color: rgba(255, 0, 112, 1);
-  --accent-color: rgba(255, 0, 112, 1);
-  --description-text-color: #f1b2ce;
-  --h1-title-color: #db00ff;
-  --background-color-page: rgba(0, 0, 40, 1);
-  --nav-bar-color-hover: #ff007066;
+.page.theme_light {
+  --nav-bar-color: #353430;
+  --accent-color: #ff8dcb;
+  --description-text-color: #353430;
+  --h1-title-color: #ffc2e6;
+  --background-color-page: #fff1f7;
+  --nav-bar-color-hover: #32312d66;
 }
 
-.page.theme_dark .decorated-zone {
-  background-image: url("../images/cover-image-dark.png");
+.page.theme_light .decorated-zone {
+  background-image: url("../images/cover-image-light.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-/* .page.theme_light .header__rec {
+.page.theme_light .header__rec {
   display: none;
-} */
+}
 
-/* .page.theme_light .circle__header {
+.page.theme_light .circle__header {
   display: none;
 }
 
@@ -35,4 +35,4 @@
 .page.theme_light .circle__container__header {
   border: none;
   margin: 17px 13px 5px 5px;
-} */
+}
