--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .page.theme_dark {
   --nav-bar-color: rgba(255, 0, 112, 1);
@@ -14,4 +14,4 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
+} */
