--- a/styles/light.css
+++ b/styles/light.css
@@ -1,38 +1,52 @@
-.page.theme_light {
-  --nav-bar-color: #353430;
-  --accent-color: #ff8dcb;
-  --description-text-color: #353430;
-  --h1-title-color: #ffc2e6;
-  --background-color-page: #fff1f7;
-  --nav-bar-color-hover: #32312d66;
+.page.theme_dark {
+  --nav-bar-color: rgba(255, 0, 112, 1);
+  --accent-color: rgba(255, 0, 112, 1);
+  --description-text-color: #f1b2ce;
+  --h1-title-color: #db00ff;
+  --background-color-page: rgba(0, 0, 40, 1);
+  --nav-bar-color-hover: #ff007066;
 }
-
-.page.theme_light .decorated-zone {
-  background-image: url("../images/cover-image-light.png");
+.page.theme_dark .decorated-zone {
+  background-image: url("../images/cover-image-dark.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-.page.theme_light .header__rec {
-  display: none;
+.page.theme_dark .header__rec {
+  display: inline;
+  color: var(--accent-color);
+  font-family: "IBM Plex Mono", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
 }
 
-.page.theme_light .circle__header {
-  display: none;
+.page.theme_dark .circle__header {
+  display: inline-block;
+  position: relative;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  margin: 6px 8px 6px 7px;
+  background-color: var(--accent-color);
 }
 
-.page.theme_light .header__rec__container {
+.page.theme_dark .header__rec__container {
+  border: none;
   position: absolute;
-  top: 20px;
-  right: 20px;
-  align-items: top;
-  justify-content: right;
+  /* top: 20px;
+  right: 20px; */
+  display: flex;
+  gap: 1px;
+  align-items: center;
+  justify-content: center;
+}
+
+.page.theme_dark .circle__container__header {
+  margin: 0;
+  padding: 2px 0px 0px 0px;
   border-top: 1px solid var(--nav-bar-color);
   border-right: 1px solid var(--nav-bar-color);
-}
-
-.page.theme_light .circle__container__header {
-  border: none;
-  margin: 17px 13px 5px 5px;
 }
