--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
   grid-template-rows: repeat(3, 1fr);
   /* grid-template-rows:auto 1fr auto; */
   /* grid-row-gap:50px; */
-  background-image: url("../images/cover-image-dark.png");
+  background-image: url("../images/cover-image-light.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -64,34 +64,27 @@
   position: absolute;
   top: 20px;
   right: 20px;
-  display: flex;
-  gap: 1px;
-  align-items: center;
-  justify-content: center;
-}
-
-.circle__container__header {
-  padding: 1px 2px;
+  align-items: top;
+  justify-content: right;
   border-top: 1px solid var(--nav-bar-color);
   border-right: 1px solid var(--nav-bar-color);
+
 }
 
+
+
+.circle__container__header {
+  border: none;
+  margin: 24px 19px 5px 5px;
+}
+
+
 .header__rec {
-  color: var(--accent-color);
-  font-family: "IBM Plex Mono", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 25px;
+  display: none;
 }
 
 .circle__header {
-  position: relative;
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  margin: 5px 5px 7px 7px;
-  background-color: var(--accent-color);
+  display: none;
 }
 
 .header__title__container {
@@ -348,8 +341,8 @@
   position: absolute;
   right: 20px;
   top: 20px;
-  border-top: 1px solid var(--accent-color);
-  border-right: 1px solid var(--accent-color);
+  border-top: 1px solid var(--nav-bar-color);
+  border-right: 1px solid var(--nav-bar-color);
 }
 
 .dark__theam__border__top {
@@ -367,8 +360,8 @@
   position: absolute;
   left: 20px;
   bottom: 20px;
-  border-bottom: 1px solid var(--accent-color);
-  border-left: 1px solid var(--accent-color);
+  border-bottom: 1px solid var(--nav-bar-color);
+  border-left: 1px solid var(--nav-bar-color);
 }
 
 .dark__theam__border__bottom {
@@ -384,10 +377,6 @@
     row-gap: 50px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    background-image: url("../images/cover-image-dark.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
   }
 
   .header__theme-menu {
@@ -473,10 +462,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    background-image: url("../images/cover-image-dark.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     row-gap: 20px;
     margin-bottom: 40px;
   }
@@ -489,6 +474,11 @@
     gap: 1px;
     align-items: center;
     justify-content: center;
+  }
+
+  .circle__container__header {
+    border: none;
+    margin: 19px 18px 5px 5px;
   }
 
   .explanations__description__mobile__class {
@@ -560,7 +550,7 @@
   }
 
   .chapter__title {
-    color: var(--accent-color);
+    color: var(--nav-bar-color);
     grid-area: 1 / 1 / span 1 / span 1;
     font-family: "IBM Plex Mono", sans-serif;
     font-style: normal;
@@ -711,15 +701,15 @@
     position: absolute;
     left: 10px;
     bottom: 1px;
-    border-bottom: 1px solid var(--accent-color);
-    border-left: 1px solid var(--accent-color);
+    border-bottom: 1px solid var(--nav-bar-color);
+    border-left: 1px solid var(--nav-bar-color);
   }
 
   .dark__theam__border__top__container {
     position: absolute;
     right: 10px;
     top: 20px;
-    border-top: 1px solid var(--accent-color);
-    border-right: 1px solid var(--accent-color);
+    border-top: 1px solid var(--nav-bar-color);
+    border-right: 1px solid var(--nav-bar-color);
   }
 }
