--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
   grid-template-rows: repeat(3, 1fr);
   /* grid-template-rows:auto 1fr auto; */
   /* grid-row-gap:50px; */
-  background-image: url("../images/cover-image-light.png");
+  background-image: url("../images/cover-image-dark.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -60,32 +60,42 @@
   border: 1px solid var(--nav-bar-color);
 }
 
-.header__rec__container {
+.header__rec__container{
   position: absolute;
   top: 20px;
   right: 20px;
-  align-items: top;
-  justify-content: right;
+  display: flex;
+  gap: 1px;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle__container__header{
+  padding: 1px 2px;
   border-top: 1px solid var(--nav-bar-color);
   border-right: 1px solid var(--nav-bar-color);
+}
 
+.header__rec{
+  color: var(--accent-color);
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
 }
 
 
+.circle__header{
+  box-shadow: 0px 0px 4px 2px #FF0070;
+  position: relative;
+  width: 9px; 
+  height: 9px;
+  border-radius: 50%; 
+  margin: 7px 5px 6px 6px;
+  background-color: var(--accent-color);
 
-.circle__container__header {
-  border: none;
-  margin: 24px 19px 5px 5px;
-}
-
-
-.header__rec {
-  display: none;
-}
-
-.circle__header {
-  display: none;
-}
+} 
 
 .header__title__container {
   grid-area: 2 / 1 / span 1 / span 3;
@@ -468,9 +478,10 @@
   }
 
   .header__rec__container {
+    border: none;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    /* top: 20px;
+    right: 20px; */
     display: flex;
     gap: 1px;
     align-items: center;
@@ -478,8 +489,10 @@
   }
 
   .circle__container__header {
-    border: none;
-    margin: 19px 18px 5px 5px;
+    margin: 0;
+    padding: 2px 0px 0px 0px;
+    border-top: 1px solid var(--nav-bar-color);
+    border-right: 1px solid var(--nav-bar-color);
   }
 
   .explanations__description__mobile__class {
