--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@
   border: 1px solid var(--nav-bar-color);
 }
 
-.header__rec__container{
+.header__rec__container {
   position: absolute;
   top: 20px;
   right: 20px;
@@ -70,32 +70,30 @@
   justify-content: center;
 }
 
-.circle__container__header{
+.circle__container__header {
   padding: 1px 2px;
   border-top: 1px solid var(--nav-bar-color);
   border-right: 1px solid var(--nav-bar-color);
 }
 
-.header__rec{
+.header__rec {
   color: var(--accent-color);
-  font-family: 'IBM Plex Mono', sans-serif;
+  font-family: "IBM Plex Mono", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 25px;
 }
 
-
-.circle__header{
-  box-shadow: 0px 0px 4px 2px #FF0070;
+.circle__header {
+  box-shadow: 0px 0px 4px 2px #ff0070;
   position: relative;
-  width: 9px; 
+  width: 9px;
   height: 9px;
-  border-radius: 50%; 
+  border-radius: 50%;
   margin: 7px 5px 6px 6px;
   background-color: var(--accent-color);
-
-} 
+}
 
 .header__title__container {
   grid-area: 2 / 1 / span 1 / span 3;
@@ -207,6 +205,7 @@
 .explanations__description__link:hover {
   text-decoration: underline;
 }
+
 .explanations__description__link:focus {
   outline: none;
   border: 1px solid var(--description-text-color);
@@ -379,7 +378,6 @@
 }
 
 @media screen and (max-width: 768px) and (min-height: 1024px) {
-
   .decorated-zone {
     width: 100vw;
     height: 100vh;
@@ -414,7 +412,6 @@
     max-width: 236px;
   }
 
-
   .chapter__title-consentration {
     padding-top: 6px;
   }
@@ -429,7 +426,7 @@
     max-width: 364px;
     max-height: 125px;
   }
-/* 
+  /* 
   .concentration__section-images {
     padding-top: 20px;
   } */
@@ -697,7 +694,7 @@
     width: 100vw;
     height: 100vh;
   }
-  
+
   .footer__focus__container {
     height: 100%;
     display: grid;
