--- a/styles/light.css
+++ b/styles/light.css
@@ -5,24 +5,43 @@
   --h1-title-color: #ffc2e6;
   --background-color-page: #fff1f7;
   --nav-bar-color-hover: #32312d66;
+  --background-image: url("../images/cover-image-light.png");
 }
 
 @media (prefers-color-scheme: light) {
-  :root.theme_light {
+  :root {
     --nav-bar-color: #353430;
     --accent-color: #ff8dcb;
     --description-text-color: #353430;
     --h1-title-color: #ffc2e6;
     --background-color-page: #fff1f7;
-    --nav-bar-color-hover: #32312d66;    
+    --nav-bar-color-hover: #32312d66;
+    --background-image: url("../images/cover-image-light.png");
     }
-}
 
-.page.theme_light .decorated-zone {
-  background-image: url("../images/cover-image-light.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+    .header__rec {
+      display: none;
+    }
+    
+    .circle__header {
+      display: none;
+    }
+    
+    .header__rec__container {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      align-items: top;
+      justify-content: right;
+      border-top: 1px solid var(--nav-bar-color);
+      border-right: 1px solid var(--nav-bar-color);
+    }
+    
+    .circle__container__header {
+      border: none;
+      margin: 17px 14px 5px 5px;
+    }
+  
 }
 
 .page.theme_light .header__rec {
@@ -45,5 +64,5 @@
 
 .page.theme_light .circle__container__header {
   border: none;
-  margin: 24px 19px 5px 5px;
+  margin: 17px 14px 5px 5px;
 }
