--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,4 +5,5 @@
   --h1-title-color: #db00ff;
   --background-color-page: rgba(0, 0, 40, 1);
   --nav-bar-color-hover: #ff007066;
+  --background-image:  url("../images/cover-image-dark.png");
 }
