--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
   grid-template-rows: repeat(3, 1fr);
   /* grid-template-rows:auto 1fr auto; */
   /* grid-row-gap:50px; */
-  background-image: url("../images/cover-image-dark.png");
+  background-image:var(--background-image);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
