--- a/styles/style.css
+++ b/styles/style.css
@@ -477,8 +477,8 @@
   .header__rec__container {
     border: none;
     position: absolute;
-    /* top: 20px;
-    right: 20px; */
+    top: 10px;
+    right: 10px;
     display: flex;
     gap: 1px;
     align-items: center;
