--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,8 +2,9 @@
   --nav-bar-color: rgba(255, 0, 112, 1);
   --accent-color: rgba(255, 0, 112, 1);
   --description-text-color: #f1b2ce;
-  --h1-title-color: #db00ff;
+  --header-title-color: #db00ff;
   --background-color-page: rgba(0, 0, 40, 1);
   --nav-bar-color-hover: #ff007066;
   --background-image:  url("../images/cover-image-dark.png");
+  --color-description-title: #000028;
 }
